# beatrice-android

./: .gitignore  .gitmodules  README.md  debug.keystore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/gokrack/beatriceAndroid/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/gokrack/beatrice_android/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/gokrack/beatriceapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  beatriceEngine.cpp  beatriceEngine.h  beatriceFullDuplexPass.h  beatriceParameters.h  native-lib.cpp
app/src/main/java/com/gokrack/beatriceAndroid/: BeatriceEngine.kt  BeatriceForegroundService.kt  MainActivity.kt
app/src/main/java/com/gokrack/beatrice_android/: MainActivity.kt
app/src/main/java/com/gokrack/beatriceapp/: BeatriceEngine.kt  BeatriceForegroundService.kt  MainActivity.kt
app/src/main/res/: icon_convert.sh
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gokrack/beatriceAndroid/: ExampleUnitTest.kt
app/src/test/java/com/gokrack/beatrice_android/: ExampleUnitTest.kt
app/src/test/java/com/gokrack/beatriceapp/: ExampleUnitTest.kt
doc/: HowToUse.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
